dropdown slide wishlist fix main page overflow

--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -2379,8 +2379,7 @@ base::-moz-progress-bar,
 .list-group-item {
   position: relative;
   display: block;
-  padding: 0.75rem 1.25rem;
-  margin-bottom: -1px;}
+  padding: 0.75rem 1.25rem;}
   .list-group-item:first-child {
     border-top-right-radius: 0.25rem;
     border-top-left-radius: 0.25rem; }
